@@ -126,7 +126,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   Sunil Joshi
   Misty De Meo
   Kent R. Spillner
-  Konstantin
+  Konstantin Vorobyev
 
 Thanks to the following, who submitted detailed bug reports and excellent
 suggestions:
