@@ -1,5 +1,7 @@
 2.6.0 () -
 
+- TD-64 sync conflict deleted all annotations of the task
+        (thanks to Markus Beppler, Konstantin Vorobyev).
 - Removed deprecated 'alias._query' setting.
 
 ------ current release ---------------------------
